RESOLVED FIXED155480
AX: certain elements not included in accessibility tree
https://bugs.webkit.org/show_bug.cgi?id=155480
Summary AX: certain elements not included in accessibility tree
chris fleizach
Reported 2016-03-14 18:10:32 PDT
There exists web content where our algorithm for determining whats the next element skips content. The case this happens in is if you have two nested inlines with continuations and the sub-child has no next sibling. we do not check its parent in that case for its next sibling this can result in whole blocks of inaccessible content <rdar://problem/19727062>
Attachments
patch (5.25 KB, patch)
2016-03-15 09:04 PDT, chris fleizach
no flags
patch (5.24 KB, patch)
2016-03-15 09:11 PDT, chris fleizach
no flags
chris fleizach
Comment 1 2016-03-15 09:04:04 PDT
chris fleizach
Comment 2 2016-03-15 09:11:58 PDT
Beth Dakin
Comment 3 2016-03-15 10:59:02 PDT
Comment on attachment 274098 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=274098&action=review > Source/WebCore/accessibility/AccessibilityRenderObject.cpp:391 > + // Case 5.1: After case 4, (the element was inline w/ continuation but had no sibling), then check it's parent. I'm not convinced that this numbering scheme makes sense! :-P
chris fleizach
Comment 4 2016-03-15 11:12:46 PDT
Comment on attachment 274098 [details] patch i was going to use 5a, but that was already taken =/
WebKit Commit Bot
Comment 5 2016-03-15 12:02:58 PDT
Comment on attachment 274098 [details] patch Clearing flags on attachment: 274098 Committed r198219: <http://trac.webkit.org/changeset/198219>
WebKit Commit Bot
Comment 6 2016-03-15 12:03:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.