AX: certain elements not included in accessibility tree https://bugs.webkit.org/show_bug.cgi?id=155480

Reviewed by Beth Dakin.

Source/WebCore:

This test case exposed a hole in the nextSibling logic where you can get into a state where we skip content.
The fix is to check if an inline element continuation has no sibling, to fall back on to the parent case to see if that has a sibling.

Test: accessibility/double-nested-inline-element-missing-from-tree.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::nextSibling):

LayoutTests:

* accessibility/double-nested-inline-element-missing-from-tree-expected.txt: Added.
* accessibility/double-nested-inline-element-missing-from-tree.html: Added.


Canonical link: https://commits.webkit.org/173621@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198219 268f45cc-cd09-0410-ab3c-d52691b4dbfc